# kk-projekat

./: .gitignore  CMakeLists.txt  README.md
constant-propagation/: CMakeLists.txt  SimpleConstantPropagation.cpp  example-transformed.ll  example.ll
examples/licm/: nolicm.ll  out.ll  test.c  test.ll
examples/licm/function_call/: nolicm.ll  out.ll  test.c  test.ll
examples/licm/loop_with_branch/: nolicm.ll  out.ll  test.c  test.ll
examples/licm/simple_loop/: nolicm.ll  out.ll  test.c  test.ll
licm/: CMakeLists.txt  LicmPass.cpp  README.md  nolicm.ll  out.ll  test.c  test.ll
licm/licm/: CMakeLists.txt  LicmPass.cpp  README.md
